# multiversed

./: ARCH_TABLE.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  detect-features.yml
benches/: dispatch_overhead.rs
src/: lib.rs
test-crates/aarch64-only/: Cargo.toml
test-crates/aarch64-only/src/: lib.rs
test-crates/all-features/: Cargo.toml
test-crates/all-features/src/: lib.rs
test-crates/default-features/: Cargo.toml
test-crates/default-features/src/: lib.rs
test-crates/force-disable/: Cargo.toml
test-crates/force-disable/src/: lib.rs
test-crates/no-features/: Cargo.toml
test-crates/no-features/src/: lib.rs
test-crates/wasm-simd128/: Cargo.toml
test-crates/wasm-simd128/src/: lib.rs
test-crates/x86-only/: Cargo.toml
test-crates/x86-only/src/: lib.rs
tests/: integration.rs  runtime_report.rs
tools/detect-features/: Cargo.toml
tools/detect-features/src/: main.rs
