[package]
name = "multiversed"
version = "0.1.0"
edition = "2021"
description = "Attribute macros wrapping multiversion with predefined SIMD target presets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/multiversed"
keywords = ["simd", "multiversion", "avx2", "neon", "performance"]
categories = ["development-tools::procedural-macro-helpers", "hardware-support"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"

[features]
default = ["x86-64-v3", "aarch64-dotprod"]

# Disable all multiversioning (passthrough only, useful for debugging/faster builds)
force-disable = []

# ============================================================================
# x86/x86_64 presets (above baseline - baseline is implicit)
# ============================================================================

# x86-64-v2: SSE4.2 + POPCNT (Nehalem 2008+, most CPUs since ~2010)
x86-64-v2 = []

# x86-64-v3: AVX2 + FMA + BMI (Haswell 2013+, Zen 2 2019+) - RECOMMENDED
x86-64-v3 = []

# x86-64-v4: AVX-512 (Skylake-X 2017+, Zen 4 2022+)
x86-64-v4 = []

# ============================================================================
# aarch64 presets (above baseline - NEON is implicit)
# ============================================================================

# aarch64-dotprod: dotprod + fp16 (Cortex-A75 2017+, Apple A11+) - RECOMMENDED
aarch64-dotprod = []

# aarch64-apple-m1: sha3 + fcma (Cortex-A76 2018+, Apple M1+)
aarch64-apple-m1 = []

# aarch64-sve2: SVE2 + i8mm + bf16 (Neoverse V1 2020+, Apple M4 2024+)
aarch64-sve2 = []

[dev-dependencies]
multiversion = "0.8"
criterion = "0.5"

[[bench]]
name = "dispatch_overhead"
harness = false

[workspace]
members = [
    ".",
    "test-crates/default-features",
    "test-crates/all-features",
    "test-crates/no-features",
    "test-crates/force-disable",
    "test-crates/x86-only",
    "test-crates/aarch64-only",
    "tools/detect-features",
]

[package.metadata.docs.rs]
all-features = true
