[package]
name = "multiversed"
version = "0.2.0"
edition = "2021"
description = "Attribute macros wrapping multiversion with predefined SIMD target presets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/multiversed"
keywords = ["simd", "multiversion", "avx2", "neon", "performance"]
categories = ["development-tools::procedural-macro-helpers", "hardware-support"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
proc-macro2 = "1.0"

[features]
default = ["x86-64-v3", "x86-64-v4-modern", "arm64"]

# Disable all multiversioning (passthrough only, useful for debugging/faster builds)
force-disable = []

# ============================================================================
# x86/x86_64 presets (above baseline - baseline is implicit)
# ============================================================================

# x86-64-v2: SSE4.2 + POPCNT (Nehalem 2008+, most CPUs since ~2010)
x86-64-v2 = []

# x86-64-v3: AVX2 + FMA + BMI (Haswell 2013+, Zen 2 2019+) - RECOMMENDED
x86-64-v3 = []

# x86-64-v4: AVX-512 base (Skylake-X 2017+, Zen 4 2022+)
x86-64-v4 = []

# x86-64-v4-modern: Full modern AVX-512 (Ice Lake 2019+, Zen 4 2022+)
# Adds VNNI, VBMI2, BITALG, BF16, GFNI, VAES - NOT available on Skylake-X
x86-64-v4-modern = []

# ============================================================================
# aarch64 presets (above baseline - NEON is implicit)
# ============================================================================

# arm64: NEON + FP16 (Cortex-A75+, Apple M1+, Neoverse N1+, Snapdragon X) - RECOMMENDED
# Minimal feature set that covers all modern ARM64 hardware
arm64 = []

[dev-dependencies]
multiversion = "0.8"
criterion = "0.5"

[[bench]]
name = "dispatch_overhead"
harness = false

[workspace]
members = [
    ".",
    "test-crates/default-features",
    "test-crates/all-features",
    "test-crates/no-features",
    "test-crates/force-disable",
    "test-crates/x86-only",
    "test-crates/aarch64-only",
    "tools/detect-features",
]

[package.metadata.docs.rs]
all-features = true
