[package]
name = "test-all-features"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
multiversed = { path = "../..", features = [
    "x86-64-v2",
    "x86-64-v3",
    "x86-64-v4",
    "aarch64-basic",
    "aarch64-v84",
    "aarch64-sve",
    "aarch64-sve2",
] }
multiversion = "0.8"
