[package]
name = "test-all-features"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
multiversed = { path = "../..", features = [
    "x86-64-v2",
    "x86-64-v3",
    "x86-64-v4",
    "x86-64-v4-modern",
    "x86-64-v4x",
    "arm64",
    "arm64-v2",
    "arm64-v3",
    "wasm32-simd128",
] }
multiversion = "0.8"
